fj new uopdate hotels router
